Add navigation in altvpn project

--- a/projects/altvpn/android.html
+++ b/projects/altvpn/android.html
@@ -12,9 +12,14 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
+  <link rel="stylesheet" href="../common.css">
+
 </head>
 
 <body>
+<a href="article-item.html" class="next-page">
+  <img src="../next.svg">
+</a>
 <header class="header">
   <div class="container">
     <a class="header__logo" href="#">
