--- a/projects/altvpn/demo-vpn.html
+++ b/projects/altvpn/demo-vpn.html
@@ -3,146 +3,152 @@
 
 <head>
   <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>demo</title>
 
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../common.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <a class="header__logo" href="#">
-        <img class="header__logo-img" src="img/logo.png" alt="logo">
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item"><a href="#">Главная</a></li>
-          <li class="menu__item menu__item-active"><a href="#">VPN</a></li>
-          <li class="menu__item"><a href="#">PROXY</a></li>
-          <li class="menu__item"><a href="#">Инструменты</a></li>
-          <li class="menu__item"><a href="#">FAQ</a></li>
-          <li class="menu__item"><a href="#">Поддержка</a></li>
-        </ul>
-      </nav>
-      <div class="burger">
+<a href="index.html" class="next-page">
+  <img src="../next.svg">
+</a>
+<header class="header">
+  <div class="container">
+    <a class="header__logo" href="#">
+      <img class="header__logo-img" src="img/logo.png" alt="logo">
+    </a>
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item"><a href="#">Главная</a></li>
+        <li class="menu__item menu__item-active"><a href="#">VPN</a></li>
+        <li class="menu__item"><a href="#">PROXY</a></li>
+        <li class="menu__item"><a href="#">Инструменты</a></li>
+        <li class="menu__item"><a href="#">FAQ</a></li>
+        <li class="menu__item"><a href="#">Поддержка</a></li>
+      </ul>
+    </nav>
+    <div class="burger">
         <span class="burger__center">
         </span>
-      </div>
     </div>
-  </header>
-  <main class="main demo">
-    <section class="join">
-      <div class="container">
-        <h1 class="join__header">Demo-доступ к VPN</h1>
-        <div class="join__body">
-          <div class="join__right">
-            <img src="img/demo/demo-1.png" alt="">
-          </div>
-          <div class="join__left">
-            <h2 class="h2-green">Протестируйте наш сервис!</h2>
-            <p class="text-v1">
-              Тестовый доступ к инструментам сайта и VPN на 1 день без ограничений.
-              Для продолжения работы после тестового периода — используйте платные подписки.</p>
-            <div class="row-sb">
-              <input type="email" class="input" placeholder="Ваш e-mail">
-              <a class="btn btn-blue">Отправить код</a>
-            </div>
-            <p class="p-light">
-              Гарантия конфиденциальности вашего почтового адреса.<br>
-              Никакого спама!
-            </p>
-          </div>
-        </div>
-        <div class="row-sb demo__bottom">
-          <div class="pay-info__left">
-            <h2>Мы принимаем к оплате почти все:</h2>
-            <div class="pay-info__variants">
-              <img pay="pp" src="img/pay/paypal.png" alt="">
-              <img pay="visa" src="img/pay/visa.png" alt="">
-              <img pay="mc" src="img/pay/mastercard.png" alt="">
-              <img pay="qiwi" src="img/pay/qiwi.png" alt="">
-              <img pay="ym" src="img/pay/ym.png" alt="">
-              <img pay="wm" src="img/pay/webmoney.png" alt="">
-              <img pay="bc" src="img/pay/bitcoin.png" alt="">
-            </div>
-            <p class="p-semibold">Возникли вопросы или вам не удалось воспользоваться тестовым доступом?</p>
-            <p>
-              Напишите в <a class="link-blue">службу поддержки</a>. Обычно ответ занимает от 5 минут
-              до одного часа, но бывают исключения.</p>
-          </div>
-          <div class="another-way">
-            <h2>Другие пути получения кода или скидки:</h2>
-            <ul class="list-with-marks">
-              <li>Предложить нам свои услуги, товары, скидки, ссылки и др. — по всем этим вопросам пишите сюда.</li>
-              <li>Можно, например, написать интересную статью в наш раздел.</li>
-              <li>А также разместить обзор нашего сервиса на своем сайте и прислать нам ссылку.</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-  </main>
-  <footer class="footer">
+  </div>
+</header>
+<main class="main demo">
+  <section class="join">
     <div class="container">
-      <div class="footer__block">
-        <span class="copyright">© 2019. ALTVPN. Все права защищены</span>
-        <p>Администрация — <a class='link' href='#'>info@altvpn.ru</a></p>
-        <p>Партнерская программа — <a class='link' href='#'>partners@altvpn.ru</a></p>
-      </div>
-
-      <div class="footer__block">
-        <h3 class="footer__title">Языки</h3>
-        <ul>
-          <li><a href="#">Русский</a></li>
-          <li><a href="#">Английский</a></li>
-          <li><a href="#">Украинский</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Социальные сети</h3>
-        <div class="social-list">
-          <a href="#" class="social-list__item"><img src="img/icon-facebook.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-twitter.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-vk.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-telegram.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-google.svg"></a>
+      <h1 class="join__header">Demo-доступ к VPN</h1>
+      <div class="join__body">
+        <div class="join__right">
+          <img src="img/demo/demo-1.png" alt="">
+        </div>
+        <div class="join__left">
+          <h2 class="h2-green">Протестируйте наш сервис!</h2>
+          <p class="text-v1">
+            Тестовый доступ к инструментам сайта и VPN на 1 день без ограничений.
+            Для продолжения работы после тестового периода — используйте платные подписки.</p>
+          <div class="row-sb">
+            <input type="email" class="input" placeholder="Ваш e-mail">
+            <a class="btn btn-blue">Отправить код</a>
+          </div>
+          <p class="p-light">
+            Гарантия конфиденциальности вашего почтового адреса.<br>
+            Никакого спама!
+          </p>
         </div>
       </div>
-      <div class="footer__block">
-        <h3 class="footer__title">О нас</h3>
-        <ul>
-          <li><a href="#">О компании</a></li>
-          <li><a href="#">Блог</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Поддержка</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Услуги</h3>
-        <ul>
-          <li><a href="#">VPN</a></li>
-          <li><a href="#">Proxy</a></li>
-          <li><a href="#">Цены</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Инструменты</h3>
-        <ul>
-          <li><a href="#">Аномайзер</a></li>
-          <li><a href="#">Прокси-чекер</a></li>
-          <li><a href="#">Тест скорости</a></li>
-          <li><a href="#">Еще...</a></li>
-        </ul>
+      <div class="row-sb demo__bottom">
+        <div class="pay-info__left">
+          <h2>Мы принимаем к оплате почти все:</h2>
+          <div class="pay-info__variants">
+            <img pay="pp" src="img/pay/paypal.png" alt="">
+            <img pay="visa" src="img/pay/visa.png" alt="">
+            <img pay="mc" src="img/pay/mastercard.png" alt="">
+            <img pay="qiwi" src="img/pay/qiwi.png" alt="">
+            <img pay="ym" src="img/pay/ym.png" alt="">
+            <img pay="wm" src="img/pay/webmoney.png" alt="">
+            <img pay="bc" src="img/pay/bitcoin.png" alt="">
+          </div>
+          <p class="p-semibold">Возникли вопросы или вам не удалось воспользоваться тестовым доступом?</p>
+          <p>
+            Напишите в <a class="link-blue">службу поддержки</a>. Обычно ответ занимает от 5 минут
+            до одного часа, но бывают исключения.</p>
+        </div>
+        <div class="another-way">
+          <h2>Другие пути получения кода или скидки:</h2>
+          <ul class="list-with-marks">
+            <li>Предложить нам свои услуги, товары, скидки, ссылки и др. — по всем этим вопросам пишите сюда.</li>
+            <li>Можно, например, написать интересную статью в наш раздел.</li>
+            <li>А также разместить обзор нашего сервиса на своем сайте и прислать нам ссылку.</li>
+          </ul>
+        </div>
       </div>
     </div>
-  </footer>
+  </section>
 
-  <script src='js/header.js'></script>
+
+</main>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__block">
+      <span class="copyright">© 2019. ALTVPN. Все права защищены</span>
+      <p>Администрация — <a class='link' href='#'>info@altvpn.ru</a></p>
+      <p>Партнерская программа — <a class='link' href='#'>partners@altvpn.ru</a></p>
+    </div>
+
+    <div class="footer__block">
+      <h3 class="footer__title">Языки</h3>
+      <ul>
+        <li><a href="#">Русский</a></li>
+        <li><a href="#">Английский</a></li>
+        <li><a href="#">Украинский</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Социальные сети</h3>
+      <div class="social-list">
+        <a href="#" class="social-list__item"><img src="img/icon-facebook.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-twitter.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-vk.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-telegram.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-google.svg"></a>
+      </div>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">О нас</h3>
+      <ul>
+        <li><a href="#">О компании</a></li>
+        <li><a href="#">Блог</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Поддержка</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Услуги</h3>
+      <ul>
+        <li><a href="#">VPN</a></li>
+        <li><a href="#">Proxy</a></li>
+        <li><a href="#">Цены</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Инструменты</h3>
+      <ul>
+        <li><a href="#">Аномайзер</a></li>
+        <li><a href="#">Прокси-чекер</a></li>
+        <li><a href="#">Тест скорости</a></li>
+        <li><a href="#">Еще...</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
+<script src='js/header.js'></script>
 
 </body>
 
