--- a/projects/altvpn/iphone.html
+++ b/projects/altvpn/iphone.html
@@ -3,10 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>vpn</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../common.css">
 
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap"
         rel="stylesheet">
@@ -15,6 +16,9 @@
 </head>
 
 <body>
+<a href="linux.html" class="next-page">
+  <img src="../next.svg">
+</a>
 <header class="header">
   <div class="container">
     <a class="header__logo" href="#">
