--- a/projects/altvpn/linux.html
+++ b/projects/altvpn/linux.html
@@ -3,16 +3,22 @@
 
 <head>
   <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>vpn</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../common.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+<a href="lucky.html" class="next-page">
+  <img src="../next.svg">
+</a>
 <header class="header">
   <div class="container">
     <a class="header__logo" href="#">
@@ -41,7 +47,9 @@
       <div class="join__body join__body_1">
         <div class="join__left">
           <h2 class="h2-green">Любой заголовок 1</h2>
-          <p class="text-v1">Наслаждайтесь любимыми сайтами по всему миру без блокировок местоположения на iPhone и iPad. Наше VPN-приложение для iOS усердно работает для защиты вашей личности и информации, чтобы вы могли ощутить настоящую свободу и безопасность в Интернете.</p>
+          <p class="text-v1">Наслаждайтесь любимыми сайтами по всему миру без блокировок местоположения на iPhone и
+            iPad. Наше VPN-приложение для iOS усердно работает для защиты вашей личности и информации, чтобы вы могли
+            ощутить настоящую свободу и безопасность в Интернете.</p>
           <a href="#tarrifs" class="btn btn-blue btn-linux"> Скачать приложение</a>
         </div>
         <div class="join__right">
