--- a/projects/altvpn/proxy-check.html
+++ b/projects/altvpn/proxy-check.html
@@ -8,12 +8,17 @@
   <title>Proxy-checker</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../common.css">
+
 
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap"
         rel="stylesheet">
 </head>
 
 <body class="proxy-list-body">
+<a href="proxy-list.html" class="next-page">
+  <img src="../next.svg">
+</a>
 <header class="header">
   <div class="container">
     <a class="header__logo" href="#">
