--- a/projects/altvpn/server-load.html
+++ b/projects/altvpn/server-load.html
@@ -8,11 +8,16 @@
   <title>server-load</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../common.css">
+
 
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap" rel="stylesheet">
 </head>
 
 <body class="server-load-body">
+<a href="support.html" class="next-page">
+  <img src="../next.svg">
+</a>
   <header class="header">
     <div class="container">
       <a class="header__logo" href="#">
