--- a/projects/altvpn/support.html
+++ b/projects/altvpn/support.html
@@ -3,158 +3,164 @@
 
 <head>
   <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>support</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../common.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap"
+        rel="stylesheet">
 
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <a class="header__logo" href="#">
-        <img class="header__logo-img" src="img/logo.png" alt="logo">
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item"><a href="#">Главная</a></li>
-          <li class="menu__item menu__item-active"><a href="#">VPN</a></li>
-          <li class="menu__item"><a href="#">PROXY</a></li>
-          <li class="menu__item"><a href="#">Инструменты</a></li>
-          <li class="menu__item"><a href="#">FAQ</a></li>
-          <li class="menu__item"><a href="#">Поддержка</a></li>
-        </ul>
-      </nav>
-      <div class="burger">
+<a href="vpn.html" class="next-page">
+  <img src="../next.svg">
+</a>
+<header class="header">
+  <div class="container">
+    <a class="header__logo" href="#">
+      <img class="header__logo-img" src="img/logo.png" alt="logo">
+    </a>
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item"><a href="#">Главная</a></li>
+        <li class="menu__item menu__item-active"><a href="#">VPN</a></li>
+        <li class="menu__item"><a href="#">PROXY</a></li>
+        <li class="menu__item"><a href="#">Инструменты</a></li>
+        <li class="menu__item"><a href="#">FAQ</a></li>
+        <li class="menu__item"><a href="#">Поддержка</a></li>
+      </ul>
+    </nav>
+    <div class="burger">
         <span class="burger__center">
         </span>
-      </div>
     </div>
-  </header>
-  <main class="main support">
-    <section class="join">
-      <div class="container">
-        <h1 class="join__header">Поддержка</h1>
-        <p>Если у вас появилась проблема с использованием наших услуг — <a href="#" class="link-blue">убедитесь</a>,
-          что мы еще не нашли ее решения. Наша поддержка работает кру&shy;глосуточно,
-          обычно ответ занимает от 5 минут до одного часа, если ответ не пришел,
-          убедитесь что на ваше сообщение пришло автоматиче&shy;ский ответ о том,
-          что ваше сообщение рассматривается нашими специалистами.</p>
-        <img src="img/support/header.png" alt="">
-      </div>
-    </section>
-    <section class="appeal">
-      <div class="container">
-        <form action="">
-          <div class="appeal__body">
-            <div class="appeal__item appeal__item-w50 ">
-              <p class="label">Категория вопроса:</p>
-              <div class="custom-select">
-                <select name="" id="">
-                  <option value="0">Выберите категорию</option>
-                  <option value="1">1</option>
-                  <option value="2">2</option>
-                </select>
-              </div>
-            </div>
-            <div class="appeal__item appeal__item-w50 ">
-              <p class="label">Категория вопроса:</p>
-              <input type="text" class="input">
-            </div>
-            <div class="appeal__item">
-              <p class="label">Ваше обращение:</p>
-              <textarea class="textarea" name="" id="" placeholder="У меня такой вопрос"></textarea>
-            </div>
-            <div class="appeal__item appeal__item-w50 ">
-              <p class="label">Прикрепить файл:</p>
-              <label class="input-file">Выберите файл
-                <input type="file">
-              </label>
-            </div>
-            <div class="appeal__item appeal__item-w50 ">
-              <p class="label">Введите ваш e-mail:</p>
-              <input type="email" class="input" placeholder="имя@домен">
-            </div>
-            <div class="appeal__item row-sb">
-              <div class="left">
-                <p class="label">Код безопасности:</p>
-                <div class="code-checker">
-                  <div class="code-checker-question">27 + 15</div>
-                  <div class="code-checker-answer">
-                    <input type="text" maxlength="2">
-                  </div>
-                </div>
-              </div>
-              <button class="btn btn-blue">Отправить вопрос</button>
+  </div>
+</header>
+<main class="main support">
+  <section class="join">
+    <div class="container">
+      <h1 class="join__header">Поддержка</h1>
+      <p>Если у вас появилась проблема с использованием наших услуг — <a href="#" class="link-blue">убедитесь</a>,
+        что мы еще не нашли ее решения. Наша поддержка работает кру&shy;глосуточно,
+        обычно ответ занимает от 5 минут до одного часа, если ответ не пришел,
+        убедитесь что на ваше сообщение пришло автоматиче&shy;ский ответ о том,
+        что ваше сообщение рассматривается нашими специалистами.</p>
+      <img src="img/support/header.png" alt="">
+    </div>
+  </section>
+  <section class="appeal">
+    <div class="container">
+      <form action="">
+        <div class="appeal__body">
+          <div class="appeal__item appeal__item-w50 ">
+            <p class="label">Категория вопроса:</p>
+            <div class="custom-select">
+              <select name="" id="">
+                <option value="0">Выберите категорию</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+              </select>
             </div>
           </div>
-
-        </form>
-      </div>
-    </section>
-
-  </main>
-  <footer class="footer">
-    <div class="container">
-      <div class="footer__block">
-        <span class="copyright">© 2019. ALTVPN. Все права защищены</span>
-        <p>Администрация — <a class='link' href='#'>info@altvpn.ru</a></p>
-        <p>Партнерская программа — <a class='link' href='#'>partners@altvpn.ru</a></p>
-      </div>
-
-      <div class="footer__block">
-        <h3 class="footer__title">Языки</h3>
-        <ul>
-          <li><a href="#">Русский</a></li>
-          <li><a href="#">Английский</a></li>
-          <li><a href="#">Украинский</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Социальные сети</h3>
-        <div class="social-list">
-          <a href="#" class="social-list__item"><img src="img/icon-facebook.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-twitter.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-vk.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-telegram.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-google.svg"></a>
+          <div class="appeal__item appeal__item-w50 ">
+            <p class="label">Категория вопроса:</p>
+            <input type="text" class="input">
+          </div>
+          <div class="appeal__item">
+            <p class="label">Ваше обращение:</p>
+            <textarea class="textarea" name="" id="" placeholder="У меня такой вопрос"></textarea>
+          </div>
+          <div class="appeal__item appeal__item-w50 ">
+            <p class="label">Прикрепить файл:</p>
+            <label class="input-file">Выберите файл
+              <input type="file">
+            </label>
+          </div>
+          <div class="appeal__item appeal__item-w50 ">
+            <p class="label">Введите ваш e-mail:</p>
+            <input type="email" class="input" placeholder="имя@домен">
+          </div>
+          <div class="appeal__item row-sb">
+            <div class="left">
+              <p class="label">Код безопасности:</p>
+              <div class="code-checker">
+                <div class="code-checker-question">27 + 15</div>
+                <div class="code-checker-answer">
+                  <input type="text" maxlength="2">
+                </div>
+              </div>
+            </div>
+            <button class="btn btn-blue">Отправить вопрос</button>
+          </div>
         </div>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">О нас</h3>
-        <ul>
-          <li><a href="#">О компании</a></li>
-          <li><a href="#">Блог</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Поддержка</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Услуги</h3>
-        <ul>
-          <li><a href="#">VPN</a></li>
-          <li><a href="#">Proxy</a></li>
-          <li><a href="#">Цены</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Инструменты</h3>
-        <ul>
-          <li><a href="#">Аномайзер</a></li>
-          <li><a href="#">Прокси-чекер</a></li>
-          <li><a href="#">Тест скорости</a></li>
-          <li><a href="#">Еще...</a></li>
-        </ul>
+
+      </form>
+    </div>
+  </section>
+
+</main>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__block">
+      <span class="copyright">© 2019. ALTVPN. Все права защищены</span>
+      <p>Администрация — <a class='link' href='#'>info@altvpn.ru</a></p>
+      <p>Партнерская программа — <a class='link' href='#'>partners@altvpn.ru</a></p>
+    </div>
+
+    <div class="footer__block">
+      <h3 class="footer__title">Языки</h3>
+      <ul>
+        <li><a href="#">Русский</a></li>
+        <li><a href="#">Английский</a></li>
+        <li><a href="#">Украинский</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Социальные сети</h3>
+      <div class="social-list">
+        <a href="#" class="social-list__item"><img src="img/icon-facebook.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-twitter.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-vk.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-telegram.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-google.svg"></a>
       </div>
     </div>
-  </footer>
+    <div class="footer__block">
+      <h3 class="footer__title">О нас</h3>
+      <ul>
+        <li><a href="#">О компании</a></li>
+        <li><a href="#">Блог</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Поддержка</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Услуги</h3>
+      <ul>
+        <li><a href="#">VPN</a></li>
+        <li><a href="#">Proxy</a></li>
+        <li><a href="#">Цены</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Инструменты</h3>
+      <ul>
+        <li><a href="#">Аномайзер</a></li>
+        <li><a href="#">Прокси-чекер</a></li>
+        <li><a href="#">Тест скорости</a></li>
+        <li><a href="#">Еще...</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
 
-  <script src="js/header.js"></script>
-  <script src="js/custom-select.js"></script>
+<script src="js/header.js"></script>
+<script src="js/custom-select.js"></script>
 
 </body>
 
