--- a/projects/altvpn/article-item.html
+++ b/projects/altvpn/article-item.html
@@ -3,121 +3,140 @@
 
 <head>
   <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>article-item</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../common.css">
 
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <a class="header__logo" href="#">
-        <img class="header__logo-img" src="img/logo.png" alt="logo">
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item"><a href="#">Главная</a></li>
-          <li class="menu__item menu__item-active"><a href="#">VPN</a></li>
-          <li class="menu__item"><a href="#">PROXY</a></li>
-          <li class="menu__item"><a href="#">Инструменты</a></li>
-          <li class="menu__item"><a href="#">FAQ</a></li>
-          <li class="menu__item"><a href="#">Поддержка</a></li>
-        </ul>
-      </nav>
-      <div class="burger">
+<a href="article-list.html" class="next-page">
+  <img src="../next.svg">
+</a>
+<header class="header">
+  <div class="container">
+    <a class="header__logo" href="#">
+      <img class="header__logo-img" src="img/logo.png" alt="logo">
+    </a>
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item"><a href="#">Главная</a></li>
+        <li class="menu__item menu__item-active"><a href="#">VPN</a></li>
+        <li class="menu__item"><a href="#">PROXY</a></li>
+        <li class="menu__item"><a href="#">Инструменты</a></li>
+        <li class="menu__item"><a href="#">FAQ</a></li>
+        <li class="menu__item"><a href="#">Поддержка</a></li>
+      </ul>
+    </nav>
+    <div class="burger">
         <span class="burger__center">
         </span>
-      </div>
     </div>
-  </header>
-  <main class="main article-item">
-    <section class="article">
-      <div class="container">
-        <h1 class="join__header">Стати</h1>
-        <div class="rubricks">
-          <ul class="rubricks__list">
-            <li class="rubricks__item">Все рубрики</li>
-            <li class="rubricks__item"><a href="#">Программная защита</a></li>
-            <li class="rubricks__item"><a href="#">Виртуальная частная сеть</a></li>
-            <li class="rubricks__item"><a href="#">Теория защиты в сети</a></li>
-            <li class="rubricks__item"><a href="#">Программная защита</a></li>
-            <li class="rubricks__item"><a href="#">Программная защита</a></li>
-            <li class="rubricks__item"><a href="#">Программная защита</a></li>
-          </ul>
-        </div>
-        <div class="article__title">
-          <h2 class="h2-green">Новые серверы в марте</h2>
-          <a href="#" class="link-back">К списку статей</a>
-          <span class="article__date">14 марта 2019</span>
-        </div>
-        <p>Новые серверы автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав "Подключиться". Оперативная информация по обновлениям сервиса в нашем телеграм-канале. Новые серверы автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав "Подключиться". Оперативная информация по обновлениям сервиса в нашем телеграм-канале. Новые серверы автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав "Подключиться".
-           Оперативная информация по обновлениям сервиса в нашем телеграм-канале.</p>
-        <p><img src="img/article-1.png" style="max-height:243px;">Новые серверы автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав "Подключиться". Оперативная информация по обновлениям сервиса в нашем телеграм-канале. Новые серверы автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав «Подключиться».</p>
-        <p>Новые серверы автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав "Подключиться". Оперативная информация по обновлениям сервиса в нашем телеграм-канале.</p>
-      </div>
-    </section>
-  </main>
-  <footer class="footer">
+  </div>
+</header>
+<main class="main article-item">
+  <section class="article">
     <div class="container">
-      <div class="footer__block">
-        <span class="copyright">© 2019. ALTVPN. Все права защищены</span>
-        <p>Администрация — <a class='link' href='#'>info@altvpn.ru</a></p>
-        <p>Партнерская программа — <a class='link' href='#'>partners@altvpn.ru</a></p>
+      <h1 class="join__header">Стати</h1>
+      <div class="rubricks">
+        <ul class="rubricks__list">
+          <li class="rubricks__item">Все рубрики</li>
+          <li class="rubricks__item"><a href="#">Программная защита</a></li>
+          <li class="rubricks__item"><a href="#">Виртуальная частная сеть</a></li>
+          <li class="rubricks__item"><a href="#">Теория защиты в сети</a></li>
+          <li class="rubricks__item"><a href="#">Программная защита</a></li>
+          <li class="rubricks__item"><a href="#">Программная защита</a></li>
+          <li class="rubricks__item"><a href="#">Программная защита</a></li>
+        </ul>
       </div>
+      <div class="article__title">
+        <h2 class="h2-green">Новые серверы в марте</h2>
+        <a href="#" class="link-back">К списку статей</a>
+        <span class="article__date">14 марта 2019</span>
+      </div>
+      <p>Новые серверы автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В
+        остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав
+        "Подключиться". Оперативная информация по обновлениям сервиса в нашем телеграм-канале. Новые серверы
+        автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В остальных случаях
+        необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав "Подключиться".
+        Оперативная информация по обновлениям сервиса в нашем телеграм-канале. Новые серверы автоматически появятся в
+        списке, если вы используете наши приложения для работы с VPN. В остальных случаях необходимо получить новые
+        конфиги или список серверов на странице VPN введя свой код и нажав "Подключиться".
+        Оперативная информация по обновлениям сервиса в нашем телеграм-канале.</p>
+      <p><img src="img/article-1.png" style="max-height:243px;">Новые серверы автоматически появятся в списке, если вы
+        используете наши приложения для работы с VPN. В остальных случаях необходимо получить новые конфиги или список
+        серверов на странице VPN введя свой код и нажав "Подключиться". Оперативная информация по обновлениям сервиса в
+        нашем телеграм-канале. Новые серверы автоматически появятся в списке, если вы используете наши приложения для
+        работы с VPN. В остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя
+        свой код и нажав «Подключиться».</p>
+      <p>Новые серверы автоматически появятся в списке, если вы используете наши приложения для работы с VPN. В
+        остальных случаях необходимо получить новые конфиги или список серверов на странице VPN введя свой код и нажав
+        "Подключиться". Оперативная информация по обновлениям сервиса в нашем телеграм-канале.</p>
+    </div>
+  </section>
+</main>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__block">
+      <span class="copyright">© 2019. ALTVPN. Все права защищены</span>
+      <p>Администрация — <a class='link' href='#'>info@altvpn.ru</a></p>
+      <p>Партнерская программа — <a class='link' href='#'>partners@altvpn.ru</a></p>
+    </div>
 
-      <div class="footer__block">
-        <h3 class="footer__title">Языки</h3>
-        <ul>
-          <li><a href="#">Русский</a></li>
-          <li><a href="#">Английский</a></li>
-          <li><a href="#">Украинский</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Социальные сети</h3>
-        <div class="social-list">
-          <a href="#" class="social-list__item"><img src="img/icon-facebook.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-twitter.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-vk.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-telegram.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-google.svg"></a>
-        </div>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">О нас</h3>
-        <ul>
-          <li><a href="#">О компании</a></li>
-          <li><a href="#">Блог</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Поддержка</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Услуги</h3>
-        <ul>
-          <li><a href="#">VPN</a></li>
-          <li><a href="#">Proxy</a></li>
-          <li><a href="#">Цены</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Инструменты</h3>
-        <ul>
-          <li><a href="#">Аномайзер</a></li>
-          <li><a href="#">Прокси-чекер</a></li>
-          <li><a href="#">Тест скорости</a></li>
-          <li><a href="#">Еще...</a></li>
-        </ul>
+    <div class="footer__block">
+      <h3 class="footer__title">Языки</h3>
+      <ul>
+        <li><a href="#">Русский</a></li>
+        <li><a href="#">Английский</a></li>
+        <li><a href="#">Украинский</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Социальные сети</h3>
+      <div class="social-list">
+        <a href="#" class="social-list__item"><img src="img/icon-facebook.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-twitter.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-vk.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-telegram.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-google.svg"></a>
       </div>
     </div>
-  </footer>
+    <div class="footer__block">
+      <h3 class="footer__title">О нас</h3>
+      <ul>
+        <li><a href="#">О компании</a></li>
+        <li><a href="#">Блог</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Поддержка</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Услуги</h3>
+      <ul>
+        <li><a href="#">VPN</a></li>
+        <li><a href="#">Proxy</a></li>
+        <li><a href="#">Цены</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Инструменты</h3>
+      <ul>
+        <li><a href="#">Аномайзер</a></li>
+        <li><a href="#">Прокси-чекер</a></li>
+        <li><a href="#">Тест скорости</a></li>
+        <li><a href="#">Еще...</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
 
-  <script src="js/header.js"></script>
+<script src="js/header.js"></script>
 
 </body>
 
