--- a/projects/altvpn/lucky.html
+++ b/projects/altvpn/lucky.html
@@ -3,160 +3,166 @@
 
 <head>
   <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lucky</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../common.css">
 
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed:400,700|Open+Sans:400,600,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-  <header class="header">
-    <div class="container">
-      <a class="header__logo" href="#">
-        <img class="header__logo-img" src="img/logo.png" alt="logo">
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item"><a href="#">Главная</a></li>
-          <li class="menu__item menu__item-active"><a href="#">VPN</a></li>
-          <li class="menu__item"><a href="#">PROXY</a></li>
-          <li class="menu__item"><a href="#">Инструменты</a></li>
-          <li class="menu__item"><a href="#">FAQ</a></li>
-          <li class="menu__item"><a href="#">Поддержка</a></li>
-        </ul>
-      </nav>
-      <div class="burger">
+<a href="macbook.html" class="next-page">
+  <img src="../next.svg">
+</a>
+<header class="header">
+  <div class="container">
+    <a class="header__logo" href="#">
+      <img class="header__logo-img" src="img/logo.png" alt="logo">
+    </a>
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item"><a href="#">Главная</a></li>
+        <li class="menu__item menu__item-active"><a href="#">VPN</a></li>
+        <li class="menu__item"><a href="#">PROXY</a></li>
+        <li class="menu__item"><a href="#">Инструменты</a></li>
+        <li class="menu__item"><a href="#">FAQ</a></li>
+        <li class="menu__item"><a href="#">Поддержка</a></li>
+      </ul>
+    </nav>
+    <div class="burger">
         <span class="burger__center">
         </span>
-      </div>
     </div>
-  </header>
-  <main class="main lucky">
-    <section class="join try">
-      <div class="container">
-        <h1 class="join__header">Счастливый IP</h1>
-        <div class="join__body">
-          <div class="join__right">
-            <img src="img/lucky-1.png" alt="">
-          </div>
-          <div class="join__left">
-            <h2 class="h2-green">Что такое счастливый посетитель?</h2>
-            <p class="text-v1">
-              Каждый тысячный посетитель или клиент нашего сайта,
-              получает сумасшедшую скидку в размере 60% на любую нашу услугу
-              без ограничений.
-              Чтобы ее получить вам необходимо раз в сутки посещать наш сайт,
-              а точнее эту же страницу и просто ловить удачу, мы уверены вам
-              обязательно когда-то повезет, желаем успехов!</p>
-            <a class="btn btn-green">Попробовать удачу</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Для скрытия добавить класс hidden -->
-    <section class="join winner">
-      <div class="container">
-        <div class="join__body">
-          <div class="join__right">
-            <img src="img/lucky-2.png" alt="">
-          </div>
-          <div class="join__left">
-            <h2 class="h2-green">Поздравляем, сегодня вам повезло!</h2>
-            <p class="text-v1">
-              Ваш IP-адрес оказался счастливым, вы получаете разовый промо-код
-              на 50% который вам необходимо использовать в течении 24 часов.</p>
-            <div class="row-sb">
-              <input type="text" class="input" placeholder="eetget35235wghd">
-              <a class="btn btn-green">Использовать промокод</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="join loser">
-      <div class="container">
-        <div class="join__body">
-          <div class="join__right">
-            <img src="img/lucky-3.png" alt="">
-          </div>
-          <div class="join__left">
-            <h2 class="h2-green">Что такое счастливый посетитель?</h2>
-            <p class="text-v1">
-              Каждый тысячный посетитель или клиент нашего сайта,
-              получает сумасшедшую скидку в размере 60% на любую нашу услугу
-              без ограничений.
-              Чтобы ее получить вам необходимо раз в сутки посещать наш сайт,
-              а точнее эту же страницу и просто ловить удачу, мы уверены вам
-              обязательно когда-то повезет, желаем успехов!</p>
-            <a class="btn btn-green">Попробовать удачу</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-
-  </main>
-  <footer class="footer">
+  </div>
+</header>
+<main class="main lucky">
+  <section class="join try">
     <div class="container">
-      <div class="footer__block">
-        <span class="copyright">© 2019. ALTVPN. Все права защищены</span>
-        <p>Администрация — <a class='link' href='#'>info@altvpn.ru</a></p>
-        <p>Партнерская программа — <a class='link' href='#'>partners@altvpn.ru</a></p>
-      </div>
-
-      <div class="footer__block">
-        <h3 class="footer__title">Языки</h3>
-        <ul>
-          <li><a href="#">Русский</a></li>
-          <li><a href="#">Английский</a></li>
-          <li><a href="#">Украинский</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Социальные сети</h3>
-        <div class="social-list">
-          <a href="#" class="social-list__item"><img src="img/icon-facebook.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-twitter.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-vk.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-telegram.svg"></a>
-          <a href="#" class="social-list__item"><img src="img/icon-google.svg"></a>
+      <h1 class="join__header">Счастливый IP</h1>
+      <div class="join__body">
+        <div class="join__right">
+          <img src="img/lucky-1.png" alt="">
+        </div>
+        <div class="join__left">
+          <h2 class="h2-green">Что такое счастливый посетитель?</h2>
+          <p class="text-v1">
+            Каждый тысячный посетитель или клиент нашего сайта,
+            получает сумасшедшую скидку в размере 60% на любую нашу услугу
+            без ограничений.
+            Чтобы ее получить вам необходимо раз в сутки посещать наш сайт,
+            а точнее эту же страницу и просто ловить удачу, мы уверены вам
+            обязательно когда-то повезет, желаем успехов!</p>
+          <a class="btn btn-green">Попробовать удачу</a>
         </div>
       </div>
-      <div class="footer__block">
-        <h3 class="footer__title">О нас</h3>
-        <ul>
-          <li><a href="#">О компании</a></li>
-          <li><a href="#">Блог</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Поддержка</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Услуги</h3>
-        <ul>
-          <li><a href="#">VPN</a></li>
-          <li><a href="#">Proxy</a></li>
-          <li><a href="#">Цены</a></li>
-        </ul>
-      </div>
-      <div class="footer__block">
-        <h3 class="footer__title">Инструменты</h3>
-        <ul>
-          <li><a href="#">Аномайзер</a></li>
-          <li><a href="#">Прокси-чекер</a></li>
-          <li><a href="#">Тест скорости</a></li>
-          <li><a href="#">Еще...</a></li>
-        </ul>
+    </div>
+  </section>
+
+  <!-- Для скрытия добавить класс hidden -->
+  <section class="join winner">
+    <div class="container">
+      <div class="join__body">
+        <div class="join__right">
+          <img src="img/lucky-2.png" alt="">
+        </div>
+        <div class="join__left">
+          <h2 class="h2-green">Поздравляем, сегодня вам повезло!</h2>
+          <p class="text-v1">
+            Ваш IP-адрес оказался счастливым, вы получаете разовый промо-код
+            на 50% который вам необходимо использовать в течении 24 часов.</p>
+          <div class="row-sb">
+            <input type="text" class="input" placeholder="eetget35235wghd">
+            <a class="btn btn-green">Использовать промокод</a>
+          </div>
+        </div>
       </div>
     </div>
-  </footer>
+  </section>
 
-  <script src='js/header.js'></script>
+  <section class="join loser">
+    <div class="container">
+      <div class="join__body">
+        <div class="join__right">
+          <img src="img/lucky-3.png" alt="">
+        </div>
+        <div class="join__left">
+          <h2 class="h2-green">Что такое счастливый посетитель?</h2>
+          <p class="text-v1">
+            Каждый тысячный посетитель или клиент нашего сайта,
+            получает сумасшедшую скидку в размере 60% на любую нашу услугу
+            без ограничений.
+            Чтобы ее получить вам необходимо раз в сутки посещать наш сайт,
+            а точнее эту же страницу и просто ловить удачу, мы уверены вам
+            обязательно когда-то повезет, желаем успехов!</p>
+          <a class="btn btn-green">Попробовать удачу</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+</main>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__block">
+      <span class="copyright">© 2019. ALTVPN. Все права защищены</span>
+      <p>Администрация — <a class='link' href='#'>info@altvpn.ru</a></p>
+      <p>Партнерская программа — <a class='link' href='#'>partners@altvpn.ru</a></p>
+    </div>
+
+    <div class="footer__block">
+      <h3 class="footer__title">Языки</h3>
+      <ul>
+        <li><a href="#">Русский</a></li>
+        <li><a href="#">Английский</a></li>
+        <li><a href="#">Украинский</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Социальные сети</h3>
+      <div class="social-list">
+        <a href="#" class="social-list__item"><img src="img/icon-facebook.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-twitter.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-vk.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-telegram.svg"></a>
+        <a href="#" class="social-list__item"><img src="img/icon-google.svg"></a>
+      </div>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">О нас</h3>
+      <ul>
+        <li><a href="#">О компании</a></li>
+        <li><a href="#">Блог</a></li>
+        <li><a href="#">FAQ</a></li>
+        <li><a href="#">Поддержка</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Услуги</h3>
+      <ul>
+        <li><a href="#">VPN</a></li>
+        <li><a href="#">Proxy</a></li>
+        <li><a href="#">Цены</a></li>
+      </ul>
+    </div>
+    <div class="footer__block">
+      <h3 class="footer__title">Инструменты</h3>
+      <ul>
+        <li><a href="#">Аномайзер</a></li>
+        <li><a href="#">Прокси-чекер</a></li>
+        <li><a href="#">Тест скорости</a></li>
+        <li><a href="#">Еще...</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
+<script src='js/header.js'></script>
 
 </body>
 
