Add sub for portfolio

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
       </section>
       <section class="portfolio">
         <h1>Мои работы</h1>
+        <p class="sub-small">В каждой работе справа есть кнопка во всю высоту экрана для навигации между сделанными страницами</p>
+
         <div class="case">
           <div class="subscription">
             <h2><span class="span-custom">Altvpn</span></h2>
