Added project in another projects

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>denisonepiece</title>
+  <title>Denis Mitryakov | portfolio</title>
 
+  <!--Styles-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:700,300,300i,400,400i,500,500i,600,600i,,700i&display=swap"
         rel="stylesheet">
   <link rel="stylesheet" href="app/css/main.css">
+  <!--Styles end-->
 
 </head>
-
 <body style="overflow: hidden">
+
+<!-- Preview block-->
 <div class="preview">
   <div class="container">
     <div class="title">
@@ -32,6 +34,10 @@
     </div>
   </div>
 </div>
+<!-- Preview block-->
+
+
+<!-- Wrapper start-->
 <div class="wrapper">
   <main class="main">
     <div class="container">
@@ -104,8 +110,8 @@
       </section>
       <section class="portfolio">
         <h1>Мои работы</h1>
-        <p class="sub-small">В каждой работе справа есть кнопка во всю высоту экрана для навигации между сделанными страницами</p>
-
+        <p class="sub-small">В каждой работе справа есть кнопка во всю высоту экрана для навигации между сделанными
+          страницами</p>
         <div class="case">
           <div class="subscription">
             <h2><span class="span-custom">Altvpn</span></h2>
@@ -199,12 +205,14 @@
           </div>
         </div>
         <div class="another-cases">
-          <h2>Другие</h2>
+          <h2>Другие немаловажные</h2>
           <ul class="another-cases__list">
+            <li><a href="projects/test-work-1/index.html">Ручная валиадция формы регистрации<span>ТЗ</span></a></li>
+            <li><a href="projects/lang-rating/index.html">Получение json с сервера<span>ТЗ</span></a></li>
+            <li><a href="projects/lang-rating/index.html">Сайт-портфолио<span>frontend</span></a></li>
             <li><a href="projects/tajam/index.html">Tajam <span>Верстка</span></a></li>
             <li><a href="projects/lian/index.html">Lian <span>Верстка</span></a></li>
             <li><a href="http://hld.agency/">HLD <span>Бэкенд</span></a></li>
-            <!--<li><a href="projects/test-work-1/index.html">Test-1 <span>Валид. формы</span></a></li>-->
           </ul>
         </div>
       </section>
@@ -266,12 +274,11 @@
     </ul>
   </aside>
 </div>
-
-<!-- WRAPPER END -->
+<!--Wrapper end-->
 
 <!-- Scripts start -->
 <script src="./app/main.js"></script>
 <!-- Scripts end -->
-</body>
 
+</body>
 </html>
